--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 # The URL the site will be built for
-base_url = "https://masterclassk8s.github.io"
+base_url = "https://K8s-mise-en-oeuvre.github.io"
 title = "MasterClass K8S"
 description = "MasterClass K8S is documentation website of eponym course using Zola Adidoks and Github Pages"
 
@@ -42,7 +42,7 @@ highlight_code = true
 [extra]
 # Put all your custom variables here
 author = "¨Pierre Baconnier"
-github = "https://github.com/masterclassk8s/masterclassk8s.github.io"
+github = "https://github.com/K8s-mise-en-oeuvre/K8s-mise-en-oeuvre.github.io"
 email = "pierre.baconnier@outlook.fr"
 
 is_netlify = false
@@ -63,7 +63,7 @@ timezone = "Europe/Paris"
 
 # Edit page on reposity or not
 edit_page = false
-docs_repo = "https://masterclassk8s.github.io/docs"
+docs_repo = "https://K8s-mise-en-oeuvre.github.io/docs"
 repo_branch = "main"
 
 ## Math settings
@@ -82,7 +82,7 @@ og_locale = "fr_FR"
 [extra.schema]
 type = "Organization"
 logo = "logo-doks.png"
-github = "https://github.com/masterclassk8s/masterclassk8s.github.io"
+github = "https://github.com/K8s-mise-en-oeuvre/K8s-mise-en-oeuvre.github.io"
 section = "blog" # see config.extra.main~url
 ## Sitelinks Search Box
 site_links_search_box = false
@@ -91,7 +91,7 @@ site_links_search_box = false
 [[extra.menu.main]]
 name = "Docs"
 section = "docs"
-url = "/docs/getting-started/introduction/"
+url = "/docs/K8s_mise_en_oeuvre/"
 weight = 10
 
 [[extra.menu.main]]
@@ -103,7 +103,7 @@ weight = 20
 [[extra.menu.social]]
 name = "GitHub"
 pre = '<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-github"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg>'
-url = "https://github.com/masterclassk8s/masterclassk8s.github.io"
+url = "https://github.com/K8s-mise-en-oeuvre/K8s-mise-en-oeuvre.github.io"
 post = "v0.1.0"
 weight = 20
 
