--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 # The URL the site will be built for
 base_url = "https://K8s-mise-en-oeuvre.github.io"
-title = "MasterClass K8S"
-description = "MasterClass K8S is documentation website of eponym course using Zola Adidoks and Github Pages"
+title = "Kubernetes, mise en oeuvre"
+description = "Documentation website of eponym course using Zola Adidoks and Github Pages"
 
 # The default language; used in feeds and search index
 default_language = "fr"
@@ -91,14 +91,8 @@ site_links_search_box = false
 [[extra.menu.main]]
 name = "Docs"
 section = "docs"
-url = "/docs/K8s_mise_en_oeuvre/"
+url = "/docs/index/"
 weight = 10
-
-[[extra.menu.main]]
-name = "Blog"
-section = "blog"
-url = "/blog/"
-weight = 20
 
 [[extra.menu.social]]
 name = "GitHub"
